# zingolabs-zewif

./: .gitignore  Cargo.toml  deploy-docs  setup-deploy-docs
.github/workflows/: ci.yml  lints-beta.yml  lints-stable.yml
docs/: README.md  attachments.md  bestpractices.md
src/: account.rs  address.rs  address_id.rs  amount.rs  anchor.rs  attachments.rs  bip_39_mnemonic.rs  blob.rs  blob_macro.rs  block_hash.rs  block_height.rs  branch_id.rs  compact_size.rs  data.rs  data_macro.rs  derivation_info.rs  digest_utils.rs  envelope_macros.rs  expiry_height.rs  groth_proof.rs  identifiable.rs  impl_attachable_macro.rs  incremental_merkle_tree.rs  incremental_witness.rs  indexed.rs  int_id.rs  join_split_description.rs  legacy_seed.rs  lib.rs  memo.rs  mnemonic_language.rs  mod_use_macro.rs  network.rs  non_hardened_child_index.rs  orchard_action_description.rs  orchard_anchor_witness.rs  orchard_sent_output.rs  orchard_witness.rs  phgr_proof.rs  position.rs  (+32 more)
src/orchard/: mod.rs  orchard_sent_output.rs  orchard_witness.rs
src/parser/: mod.rs  parse_macro.rs  parseable_types.rs  parser_impl.rs  prelude.rs
src/sapling/: address.rs  incoming_viewing_key.rs  mod.rs  sapling_anchor_witness.rs  sapling_expanded_spending_key.rs  sapling_extended_full_viewing_key.rs  sapling_extended_spending_key.rs  sapling_incoming_viewing_key.rs  sapling_output_description.rs  sapling_sent_output.rs  sapling_spend_description.rs  sapling_spending_key.rs  sapling_witness.rs
src/transparent/: address.rs  mod.rs  transparent_spend_authority.rs  transparent_spending_key.rs
