[package]
name = "zewif"
version = "0.1.0"
edition = "2024"

[dependencies]
dcbor = { version = "^0.18.0", features = ["anyhow"] }
bc-components = "^0.20.0"
bc-envelope = "^0.27.1"
bc-crypto = "^0.8.0"

anyhow = "1.0.95"
chrono = "0.4.39"
hex = "0.4.3"
zcash_protocol = "0.5"

[features]
default = []
with-context = []

[dev-dependencies]
bc-rand = "^0.4.0"
rand = "^0.8.5"
