[package]
name = "zingolabs-zewif"
description = "Fork of Blockhain Commons's zewif crate."
version = "0.0.1"
edition = "2024"
repository = "https://github.com/zingolabs/zewif"
homepage = "https://github.com/zingolabs/zewif"

[dependencies]
dcbor = { version = "^0.19.0", features = ["anyhow"] }
bc-components = "^0.21.0"
bc-envelope = "^0.28.0"
bc-crypto = "^0.9.0"

anyhow = "1.0.95"
chrono = "0.4.39"
hex = "0.4.3"

bc-rand = { version = "^0.4.0", optional = true }
rand = { version = "^0.8.5", optional = true }

[features]
default = []
with-context = []
test-dependencies = ["dep:rand", "dep:bc-rand"]

[dev-dependencies]
bc-rand = "^0.4.0"
rand = "^0.8.5"
